--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,22 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     {
       "src": "/udid",
       "methods": ["POST"],
-      "dest": "index.js"
+      "dest": "/api/udid.js"
+    },
+    {
+      "src": "/signit.mobileconfig",
+      "dest": "/public/signit.mobileconfig",
+      "headers": {
+        "Content-Type": "application/x-apple-aspen-config",
+        "Cache-Control": "no-cache"
+      }
     },
     {
       "src": "/(.*)",
