--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    {
-      "src": "/udid",
-      "methods": ["POST"],
-      "dest": "/api/udid.js"
-    },
-    {
-      "src": "/signit.mobileconfig",
-      "dest": "/public/signit.mobileconfig",
-      "headers": {
-        "Content-Type": "application/x-apple-aspen-config",
-        "Cache-Control": "no-cache"
-      }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
-      ]
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
